       to define default language for document generation.
- New: Can reopen a closed supplier invoice.
- New: Move permission "see hidden categories" into "see hidden products/services".
- New: Can delete several files at once in FTP module.
- New: Add box "last contracts".
- New: Works even if Web hosting provider has disabled glob function.
- Fix: Format number was wrong for ar_AR language.
- Fix: Can change password if has only permission change password.
- Fix: Project PDF document show the tasks.
- Fix: bug #29278 : SMTP fails with IP
- Fix: Default language on login page.
- Fix: Complete support of euros sign (even in PDF).
 
For developers:
- More comments in code.
- Uniformize some code. 
- Delete all useless pre.inc.php files.
- Fix W3C errors in page forging.
- Qual: Mutualize code of menu managers.
- Better isolation of modules files and dolibarr core files. 

WARNING: 
- A lot of class files (*.class.php) has moved into subdirectories. So If you use
  or develop non official modules that includes Dolibarr classes, you will have to rename
  path to thoose classes into the include function.
- Also, parameters of the "fetch()" method for class "User" has changed to reflect
  other fetch methods.   


***** ChangeLog for 2.8.1 compared to 2.8 *****
For users:
- Fix: Works on database with _ in name.
- Fix: Broken feature in trips and expense module.
- Fix: Can use $ in database and login/pass values.
- Fix: No error on upgrade if there is orphelins tasks.
- Fix: Failed to login when user agent string was longer than 128.
- Fix: bug #29526 : Numérotation Proposition Incorrecte après duplication


***** ChangeLog for 2.8 compared to 2.7 *****

For users:
- New: Support note on trips module
- New: Can link contacts to projects
- New: Can removed attached file on email form if attachment was wrong.
- New: Add option to show your logo on top of left menu.
- New: task #9935: Can edit accountancy code.
- New: Add an option to make users email required.