@@ -26,6 +26,7 @@ For users:
 - New: Can delete several files at once in FTP module.
 - New: Add box "last contracts".
 - New: Works even if Web hosting provider has disabled glob function.
+- New: Can now send supplier order by mail.
 - Fix: Format number was wrong for ar_AR language.
 - Fix: Can change password if has only permission change password.
 - Fix: Project PDF document show the tasks.
